# rpi-peristaltic-rs

./: Cargo.toml  Makefile  README.md
.zed/: settings.json
encoder-firmware/: Cargo.toml  README.md  build.rs
encoder-firmware/.cargo/: config.toml
encoder-firmware/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs  uart_protocol.rs
