[workspace]
resolver = "2"
members = ["encoder-firmware", "shared"]

[workspace.dependencies]
cobs = { version = "0.4.0", default-features = false }
crc = { version = "3.0", default-features = false }
postcard = "1.0"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
