cargo-features = ["per-package-target"]

[package]
name = "encoder-firmware"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv6m-none-eabi"

[[bin]]
bench = false
doctest = false
name = "encoder-firmware"
path = "src/main.rs"
test = false

[dependencies]
byte-slice-cast = { version = "1.2.0", default-features = false }
# Protocol & CRC
byteorder = { version = "1.5", default-features = false }
cobs = { version = "0.4.0", default-features = false }
# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
crc = { version = "3.0", default-features = false }
crc-catalog = "2.4"
critical-section = "1.1"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
display-interface = "0.5.0"
display-interface-spi = { version = "0.5.0" }
embassy-embedded-hal = { version = "0.3.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "dhcpv4",
    "dns",
    "icmp",
    "medium-ethernet",
    "multicast",
    "proto-ipv4",
    "proto-ipv6",
    "raw",
    "tcp",
    "udp",
] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-rp = { version = "0.6.0", features = [
    "critical-section-impl",
    "defmt",
    "rp2040",
    "time-driver",
    "unstable-pac",
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.4.0" }
embedded-graphics = "0.8.1"
embedded-hal-1 = { version = "1.0", package = "embedded-hal" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-sdmmc = "0.7.0"
embedded-storage = { version = "0.3" }
encoder-protocol = { path = "../shared/" }
fixed = "1.23.1"
fixed-macro = "1.2"
heapless = "0.8"
log = "0.4"
mipidsi = "0.8.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
postcard = "1.0"
rand = { version = "0.9.0", default-features = false }
# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
rotary-encoder-embedded = { version = "0.5.0" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
smart-leds = "0.4.0"
static_cell = "2.1"
usbd-hid = "0.8.1"
