cargo-features = ["per-package-target"]

[package]
name = "encoder-firmware"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv6m-none-eabi"

[[bin]]
bench = false
doctest = false
name = "encoder-firmware"
path = "src/main.rs"
test = false

[dependencies]
# Protocol & CRC
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] }
embassy-rp = { version = "0.6.0", features = [
    "critical-section-impl",
    "defmt",
    "rp2040",
    "time-driver",
    "unstable-pac",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
encoder-protocol = { path = "../shared/" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
rotary-encoder-embedded = { version = "0.5.0" }
static_cell = "2.1"
